[package]
name = "rust_learning"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# profile of release
[profile.release]
# when panic happened, the program will abort instead of unwinding and clearing.
panic='abort'